2009-07-01  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #26412: avrdude segfaults when called with a programmer that does not
	support it
	* main.c: do not call pgm->perform_osccal() unless it is != 0.

2009-06-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Zoltan Laday:
	patch #6825: xmega problems with JTAGICEmkII
	* jtagmkII.c: Many fixes for Xmega devices.
	* jtagmkII_private.h: Add various new constants required for
	Xmega devices.
	* avrdude.conf.in: New devices: ATXMEGA64A1, ATXMEGA192A1,
	ATXMEGA256A1, ATXMEGA64A3, ATXMEGA128A3, ATXMEGA192A3,
	ATXMEGA256A3, ATXMEGA256A3B, ATXMEGA16A4, ATXMEGA32A4,
	ATXMEGA64A4, ATXMEGA128A4
	* avr.c (avr_read, avr_write): Add more names for (Xmega)
	memory areas that require paged operation.

2009-06-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* stk500v2.c (stk600_xprog_write_byte): Handle writing fuse bytes.

2009-04-28  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Carl Hamilton:
	* update.c (parse_op): correctly \0-terminate buf after filling
	it, before it is potentially used as the source of a call to
	strlen or strcpy.

2009-04-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/avrdude.texi: Merge the -P 0xXXX option description from
	avrdude.1.

2009-04-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: declare AM_PROG_CC_C_O to avoid the warning
	"compiling `config_gram.c' with per-target flags
	requires `AM_PROG_CC_C_O' in `configure.ac'"

2009-03-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #25971: "error writing to <stdout>" with multiple -U params.
	* fileio.c: Do not close the input/output stream when working on an
	stdio stream.

2009-02-28  Thomas Fischl <tfischl@gmx.de>

	Based on patch #6484 commited by Jurgis Brigmanis:
	* usbasp.c: added software control for ISP speed
	* usbasp.h: (Ditto.)

2009-02-28  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avr910.c (avr910_read_byte_flash): Eliminate a static variable that
	hasn't been in use for 5 years.
